--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html">
             <div>
+                <label for="password">Your Secret Code (must be 6 alphanumeric characters)<span class="required-field">*</span></label>
+                <input type="password" id="password" name="password" pattern="[0-9a-zA-Z]{6}" title="6 Alphanumeric Character Passcode" required>
                 <label for="firstname">Your First Name<span class="required-field">*</span></label>
                 <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35 required">
                 <label for="lastname">Your Last Name<span class="required-field">*</span></label>
